--- a/Index.html
+++ b/Index.html
@@ -16,9 +16,35 @@
     <section id="banner">
         <h1>Let's Help Flood Victims</h1>
         <p>Let's help them this is the most precious time to bring up bring up
-           your humanity  help them is our cherecterstic duty 
-        </p>
-        <p>This about them they also have family father/mother & child</p>
+           your humanity  help them is our cherecterstic duty</p> 
+        <p>Your donation will be immediately put to use</p>
+        <a href="#" type="button">Donate Now</a>
+    </section>
+
+    <section id="payment-section">
+        <div class="donate">
+        <h1>Donate Today</h1>
+         <p>As much as you can they need your help & we help you to help them<br>
+           Show the world that we are always with our peple</p>
+        </div>
+
+        <div id="prices">
+           <div class="packages"><h1>100tk</h1></div>
+           <div class="packages"><h1>200tk</h1></div>
+           <div class="packages"><h1>500tk</h1></div>
+           <div class="packages"><h1>1000tk</h1></div>
+           <div class="packages"><h1>5000tk</h1></div>
+        </div>
+        
+        <form action="#"><input type="text" placeholder="Other Amount (Taka)"></form>
+
+        <a href="#" type="button">Donate Now</a>
+
+    </section>
+
+    <section id="donation-plan">
+      <h1>Our Donation plan</h1>
+      <p>Together we can end this crysis forever</p>
     </section>
     
 </body>
