--- a/Index.html
+++ b/Index.html
@@ -39,13 +39,72 @@
         <form action="#"><input type="text" placeholder="Other Amount (Taka)"></form>
 
         <a href="#" type="button">Donate Now</a>
-
     </section>
 
     <section id="donation-plan">
       <h1>Our Donation plan</h1>
-      <p>Together we can end this crysis forever</p>
+      <p>Together we can end this crysis forever <br>
+       We hope you will be with humanity</p>
+
+      <div class="choice-section">
+
+       <div class="option-div" id="food-div">
+         <div><img src="./Icons/food.png" alt="food.png"></div>
+         <h1>Food for a family</h1>
+         <p>Also you can give them <br> foods,dry foods,fruits,water</p>
+       </div>
+
+       <div class="option-div" id="shelter-div">
+        <div><img src="Icons/shelter.png" alt=""></div>
+        <h1>Shelter for a family</h1>
+        <p>As soon as you complete your donation,<br> your gift will start its journey.</p>
+       </div>
+
+       <div class="option-div" id="education-div">
+        <div><img src="./Icons/Frame-1.png" alt=""></div>
+        <h1>Education for a child</h1>
+        <p>As soon as you complete your donation,<br> your gift will start its journey.</p>
+       </div>
+
+      </div>
+    </section>
+
+    <section id="message-section">
+      <div class="messege-div" id="img-div">
+        <img src="Images/donation13.jpg" alt="donation13.jpg">
+      </div>
+      <div class="messege-div" id="text-div">
+        <h1>They Need Your Help</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit dolor eveniet sunt nemo sapiente itaque obcaecati et aliquam eaque at.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti doloribus atque eum accusamus molestias obcaecati dolore sunt fuga officia excepturi.
+        </p>
+        <a href="#" type="button">How to contribute ?</a>
+      </div>
     </section>
     
+    <section id="message-section-2">
+      <div class="div" id="text-div">
+        <h1>Welcome to our Charity</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia voluptate autem, rerum nobis tempore quia doloribus porro vel harum soluta sit aperiam architecto quos? Eligendi.</p>
+        <button type="button">Impact of your <br>Contribution</button>
+      </div>
+
+      <div class="div" id="img-div">
+        <img src="./Images/donation1.jpg" alt="donation1.jpg">
+      </div>
+    </section>
+
+    <section id="newsletter-section">
+        <div id="update">
+          <h1>Want to get upadated?</h1>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore officiis ab nemo, <br> odit vero rem cupiditate similique blanditiis <br> porro nisi dicta nihil
+        </div>
+
+        <form action="#">
+          <input type="text" placeholder="Email"><button>Subcribe</button>
+        </form>
+    </section>
+
 </body>
+<footer></footer>
 </html>
