full page added

--- a/Index.html
+++ b/Index.html
@@ -106,5 +106,8 @@
     </section>
 
 </body>
-<footer></footer>
+<footer>
+  <h1>Take care of your self</h1>
+  <p style="color: #fff;">Good to see you</p>
+</footer>
 </html>
